<resources>
    <string name="app_name">Bilem Online</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mainactivity">MainActivity</string>
    <string name="it_is_forgot_password">It is Forgot password</string>
    <string name="it_is_onboarding">It is onboarding</string>
    <string name="move">Move</string>
    <string name="it_is_otp_fragment">It is OTP fragment</string>
    <string name="it_is_sign_in">It is Sign In</string>


    <string name="on_boarding_text">Здесь будет находится описание для онбоардинга</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="trial_content">Добро пожаловать!</string>
    <string name="next">Далее</string>
    <string name="next_lesson">Следующий урок</string>
    <string name="comments">Коментарии</string>
    <string name="start">Начать</string>
    <string name="login">Логин</string>
    <string name="name">Имя</string>
    <string name="your_name">Ваше имя</string>
    <string name="password">Пароль</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="forgot_the_password">Забыли пароль?</string>
    <string name="forgot_password_instruction">Введите адрес эл. почты, чтобы получить код для сброса пароля</string>
    <string name="sign_in">Войти</string>
    <string name="sign_out">Выйти</string>
    <string name="confirm">Подтвердить</string>
    <string name="have_no_account">Нет аккаунта?</string>
    <string name="register">Зарегистрироваться</string>
    <string name="register2">Регистрация</string>
    <string name="default_login">user@gmail.com</string>
    <string name="your_full_name">Ваше полное имя</string>
    <string name="email">Почта</string>
    <string name="your_email">Ваша почта</string>
    <string name="terms_agreement"> Я принимаю (пока не понятно)</string>
    <string name="create_an_account"> Создать аккаунт</string>
    <string name="or"> Или </string>
    <string name="sing_using_google"> Войти через Google </string>
    <string name="have_an_account"> Уже есть аккаунт? </string>
    <string name="password_recovery"> Восстановление пароля </string>
    <string name="enter_otp"> Введите код\n подтверждения </string>
    <string name="enter_otp_instruction"> Введите 6-значный код, который мы отправили на почту  </string>
    <string name="resend_code_detail"> Отправить код повторно через 0:59  </string>
    <string name="resend_code_again"> Отправить код еще раз  </string>
    <string name="password_error"> пароли не совпадают*  </string>
    <string name="empty_text_error"> заполните поле*  </string>
    <string name="fill_out_all_fields_error"> заполните все поля  </string>
    <string name="new_password"> Новый пароль  </string>
    <string name="invalid_email"> Не правильный формат </string>
    <string name="invalid_password"> Пароль должен состоять как минимум из 4х символов </string>
    <string name="password_does_not_match"> Пароли не совпадают </string>
    <string name="invalid_name"> Слишком большой </string>
    <string name="main_page">Главная</string>
    <string name="my_learnings">Мои курсы</string>
    <string name="profile">Профиль</string>
    <string name="search">Поиск</string>
    <string name="intent_to_course_constructor">Перейти на онлайн конструктор курсов</string>
    <string name="tv_for_your_courses">Здесь появятся ваши курсы</string>
    <string name="search_courses">Поискать курсы</string>
    <string name="free_courses">Бесплатные курсы</string>
    <string name="popular_categories">Популярные категории</string>
    <string name="course_categories">Категории курсов</string>
    <string name="paid_courses">Платные курсы</string>
    <string name="course_title">English for beginners</string>
    <string name="course_author">Language zone</string>
    <string name="course_rate">4.7</string>
    <string name="course_learned">Обучились:</string>
    <string name="course_learned_number">12</string>
    <string name="course_price">1999</string>
    <string name="course_price_free">Бесплатно</string>
    <string name="course_price_text">сом</string>
    <string name="category_title">UX/UI Дизайн</string>
    <string name="category_quantity">32 курса</string>
    <string name="categories">Популярные категории</string>
    <string name="text_for_unathoriazed">Здесь будут курсы после того, как вы зарегистрируетесь</string>
    <string name="all_courses">Все</string>
    <string name="wish_list_courses">Хочу пройти</string>
    <string name="favorite_courses">Любимые</string>
    <string name="completed_courses">Пройденные</string>
    <string name="hello_user">Арстан</string>
    <string name="modify_account">Редактировать аккаунт</string>
    <string name="compeleted_courses">Пройденные курсы</string>
    <string name="created_courses">Созданные курсы</string>
    <string name="change_password">Изменить пароль</string>
    <string name="frequently_asked_questions">Часто задаваемые вопросы</string>
    <string name="change_language">Язык приложения</string>
    <string name="my_wallter">Кошелек</string>
    <string name="course_title_in_course">Название курса</string>
    <string name="start_learning">Начать обучение</string>
    <string name="course_info">Инфо</string>
    <string name="course_feedback">Отзывы</string>
    <string name="studied_count">Обучились: 12</string>
    <string name="completed_count">0/20 пройдено</string>
    <string name="about_course_title">О курсе</string>
    <string name="about_course_text">Data Scientist is The Sexiest Job of the 21st Century, а машинное обучение и анализ данных - это захватывающие области, знакомство с которыми точно не оставит вас равнодушными! Мы начнем с самого начала, разберем центральные понятия и темы. Познакомимся с такими методами машинного обучения как деревья решений и нейронные сети. Практическая часть курса будет посвящена знакомству с наиболее популярными библиотеками для анализа данных, используя язык программирования Python — Pandas и Scikit-learn.</string>
    <string name="teachers_title">Преподаватели</string>
    <string name="_999">999</string>
    <string name="add_feedback_requirements">Чтобы написать отзыв, завершите 80% проекта</string>
    <string name="_4_1">4.1</string>
    <string name="author_name">Джонатан Бэккер</string>
    <string name="_34">34</string>
    <string name="_25">25</string>
    <string name="_13">13</string>
    <string name="_46">46</string>
    <string name="_2">2</string>
    <string name="account_edit">Редактировать аккаунт</string>
    <string name="update_photo">Изменить фото</string>
    <string name="personal_data">Личные данные</string>
    <string name="age">Возраст</string>
    <string name="lastname">Фамилия</string>
    <string name="about_yourself">О себе</string>
    <string name="fieldOfActivity">Сфера деятельности</string>
    <string name="update_profile">Обновить профиль</string>
    <string name="working_place">Место работы</string>
    <string name="city">Город проживания</string>
    <string name="username">Никнэйм</string>
    <string name="education_place">Место учебы</string>
    <string name="change_current_lanuage">Выберите язык приложения</string>
    <string name="russian_language_change">Русский</string>
    <string name="kyrgyz_language_change">Кыргызкий</string>
    <string name="write_feedback">Написать отзыв</string>
    <string name="write_feedback_title">Как вам курс?</string>
    <string name="save_to_favorites">Добавить в избранное</string>
    <string name="added_to_favorites">Добавленно в избранное</string>
    <string name="onboarding1">Добро пожаловать, инноваторы</string>
    <string name="onboarding2">Последовательность - ключ к успеху</string>
    <string name="onboarding3">Открой мир знаний с нами!</string>

</resources>