<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/custom_white"
    android:orientation="vertical"
    tools:context=".app.fragments.registration.ForgotPasswordFragment">

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/resend_code_again"
        android:layout_marginStart="16dp"
        android:src="@drawable/ic_arrow_back"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/have_an_account"
        android:src="@drawable/ic_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/raleway_bold"
        android:text="@string/password_recovery"
        android:textColor="@color/black"
        android:textFontWeight="700"
        android:textSize="24sp"
        tools:targetApi="31" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/raleway_semibold"
        android:gravity="center"
        android:text="@string/forgot_password_instruction"
        android:textColor="@color/grey_logo"
        android:textFontWeight="500"
        android:textSize="16sp"
        tools:targetApi="31" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/raleway_semibold"
        android:text="@string/email"
        android:textColor="@color/grey_logo"
        android:textFontWeight="600"
        android:textSize="14sp"
        tools:targetApi="31" />

    <EditText
        android:id="@+id/etNewEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_text_input_default"
        android:fontFamily="@font/raleway"
        android:hint="@string/default_login"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="16dp"
        android:paddingVertical="14dp"
        android:textColor="@color/black"
        android:textFontWeight="500"
        android:textSize="14sp"
        tools:targetApi="31" />

    <TextView
        android:id="@+id/tvEmailError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="1dp"
        android:fontFamily="@font/nunito"
        android:text="@string/empty_text_error"
        android:textColor="#EF0000"
        android:textFontWeight="600"
        android:textSize="11sp"
        android:visibility="gone"
        tools:targetApi="31" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnApply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="46dp"
        android:background="@drawable/on_boarding_button_background"
        android:backgroundTint="@color/primary_red"
        android:fontFamily="@font/raleway_semibold"
        android:paddingHorizontal="16dp"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textFontWeight="600"
        android:textSize="16sp"
        tools:targetApi="31" />

</LinearLayout>