<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/custom_white"
    android:orientation="vertical"
    tools:context=".app.fragments.registration.OtpCodeFragment">

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/resend_code_again"
        android:src="@drawable/ic_arrow_back" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/have_an_account"
        android:src="@drawable/ic_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/raleway_bold"
        android:gravity="center"
        android:text="@string/enter_otp"
        android:textColor="@color/black"
        android:textFontWeight="700"
        android:textSize="24sp"
        tools:targetApi="31" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/raleway_semibold"
        android:gravity="center"
        android:text="@string/enter_otp_instruction"
        android:textColor="@color/grey_logo"
        android:textFontWeight="500"
        android:textSize="16sp"
        tools:targetApi="31" />

    <com.chaos.view.PinView
        android:id="@+id/pinView"
        style="@style/PinWidget.PinView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="38dp"
        android:cursorVisible="true"
        android:inputType="number"
        android:itemBackground="@color/gray"
        app:itemCount="6"
        app:itemHeight="65dp"
        app:itemRadius="4dp"
        app:itemSpacing="10dp"
        app:itemWidth="45dp"
        app:lineColor="@color/gray"
        app:lineWidth="0dp"
        app:viewType="rectangle" />

    <TextView
        android:id="@+id/tvOtpError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/nunito"
        android:text="@string/fill_out_all_fields_error"
        android:textColor="#EF0000"
        android:textFontWeight="600"
        android:textSize="11sp"
        android:visibility="gone"

        tools:targetApi="31" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnResendOtp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="46dp"
        android:background="@drawable/google_button_background"
        android:fontFamily="@font/raleway_semibold"
        android:paddingHorizontal="16dp"
        android:text="@string/resend_code_again"
        android:textAllCaps="false"
        android:textColor="@color/grey_primary"
        android:textFontWeight="600"
        android:textSize="16sp"
        tools:targetApi="31" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnApply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/on_boarding_button_background"
        android:backgroundTint="@color/primary_red"
        android:fontFamily="@font/raleway_semibold"
        android:paddingHorizontal="16dp"
        android:text="@string/confirm"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textFontWeight="600"
        android:textSize="16sp"
        tools:targetApi="31" />

    <TextView
        android:id="@+id/tvResendCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/raleway_semibold"
        android:gravity="center"
        android:text="@string/resend_code_detail"
        android:textColor="@color/grey_logo"
        android:textFontWeight="600"
        android:textSize="16sp"
        android:visibility="gone"
        tools:targetApi="31" />


</LinearLayout>