<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    tools:context=".app.fragments.registration.SignInFragment">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/hello_blank_fragment"
        android:src="@drawable/ic_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo2"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/hello_blank_fragment"
        android:src="@drawable/ic_registration_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/registration_background"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/raleway_semibold"
            android:text="@string/your_email"
            android:textColor="@color/grey_logo"
            android:textFontWeight="600"
            android:textSize="14sp"
            tools:targetApi="31" />

        <EditText
            android:id="@+id/etLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/edit_text_input_default"
            android:fontFamily="@font/raleway"
            android:hint="@string/default_login"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="16dp"
            android:paddingVertical="14dp"
            android:textColor="@color/black"
            android:textFontWeight="500"
            android:textSize="14sp"
            tools:targetApi="31" />

        <TextView
            android:id="@+id/tvLoginError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="1dp"
            android:fontFamily="@font/nunito"
            android:text="@string/empty_text_error"
            android:textColor="#EF0000"
            android:textFontWeight="600"
            android:textSize="11sp"
            android:visibility="gone"
            tools:targetApi="31" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/raleway_semibold"
            android:text="@string/password"
            android:textColor="@color/grey_logo"
            android:textFontWeight="600"
            android:textSize="14sp"
            tools:targetApi="31" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/edit_text_input_default"
            app:boxStrokeWidthFocused="0dp"
            app:boxStrokeWidth="0dp"
            app:errorEnabled="false"
            app:helperTextEnabled="false"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:fontFamily="@font/raleway"
                android:inputType="textPassword"
                android:paddingHorizontal="16dp"
                android:paddingVertical="12dp"
                android:textColor="@color/black"
                android:textFontWeight="500"
                android:textSize="14sp"
                tools:targetApi="31" />


        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvPasswordError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="1dp"
            android:fontFamily="@font/nunito"
            android:text="@string/invalid_password"
            android:textColor="#EF0000"
            android:textFontWeight="600"
            android:textSize="11sp"
            android:visibility="gone"
            tools:targetApi="31" />

        <TextView
            android:id="@+id/btnForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="12dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/raleway_semibold"
            android:text="@string/forgot_the_password"
            android:textColor="@color/grey_logo"
            android:textFontWeight="600"
            android:textSize="14sp"
            tools:targetApi="31" />

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/raleway_semibold"
            android:textFontWeight="600"
            android:textSize="16sp"
            tools:targetApi="31"
            android:textAllCaps="false"
            android:background="@drawable/on_boarding_button_background"
            android:text="@string/sign_in"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <View
                android:layout_width="150dp"
                android:layout_height="2dp"
                android:layout_marginTop="8dp"
                android:background="@color/gray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:fontFamily="@font/raleway"
                android:text="@string/or"
                android:textColor="@color/black"
                android:textFontWeight="400"
                android:textSize="14sp"
                tools:targetApi="31" />

            <View
                android:layout_width="150dp"
                android:layout_height="2dp"
                android:layout_marginTop="8dp"
                android:background="@color/gray" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnGoogle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/google_button_background"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingVertical="12dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="7dp"
                android:contentDescription="@string/hello_blank_fragment"
                android:src="@drawable/ic_gmail" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway_semibold"
                android:text="@string/sing_using_google"
                android:textColor="@color/grey_primary"
                android:textFontWeight="600"
                android:textSize="14sp"
                tools:targetApi="31" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:fontFamily="@font/raleway"
                android:text="@string/have_no_account"
                android:textColor="@color/black"
                android:textFontWeight="700"
                android:textSize="14sp"
                tools:targetApi="31" />

            <TextView
                android:id="@+id/btnRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/raleway"
                android:text="@string/register"
                android:textColor="@color/primary_red"
                android:textFontWeight="700"
                android:textSize="14sp"
                tools:targetApi="31" />

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>