<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".app.fragments.course.CourseInfoFragment">

    <TextView
        android:id="@+id/tvAboutCourse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:fontFamily="@font/raleway_semibold"
        android:textFontWeight="600"
        tools:targetApi="31"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        android:text="@string/about_course_title"
        />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:fontFamily="@font/raleway"
        android:textFontWeight="400"
        tools:targetApi="31"
        android:text="@string/about_course_text"
        android:textColor="@color/black"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:fontFamily="@font/raleway_semibold"
        android:textFontWeight="600"
        tools:targetApi="31"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        android:text="@string/teachers_title"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvAuthors"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/course_authors_item"
        />

</LinearLayout>